# Levis

./: .prettierignore  LICENSE  README.ja.md  README.md  README.zh.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  notarization-status.yml  release.yml
public/: dragpill.html
src/: App.css  App.tsx  TabBar.tsx  dev-tauri-shim.ts  doc-tabs.ts  draft-autosave.ts  export-doc.ts  ipc.ts  main.tsx  menu-bridge.ts  startup-restore.ts  test-local-storage.ts  useTabDragMerge.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/aicompat/: Cargo.toml
src-tauri/crates/aicompat/src/: agent.rs  http.rs  lib.rs  oauth_login.rs  oauth_page.rs  oauth_server.rs  pkce.rs  responses_api.rs
src-tauri/crates/aicompat/src/providers/: anthropic.rs  custom.rs  mod.rs  openai_api_key.rs  openai_codex.rs  openai_responses_compatible.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_identity.rs  atomic.rs  lib.rs  main.rs  menu.rs  tab_drag.rs
src-tauri/src/ai/: agent.rs  cancel.rs  catalog.rs  client.rs  mod.rs  route.rs  tools.rs  workspace.rs
src-tauri/src/auth/: api_key.rs  claude.rs  custom_endpoint.rs  keys.rs  mod.rs  openai_codex.rs
src-tauri/src/commands/: chat_window.rs  cli.rs  drafts.rs  export.rs  fs.rs  mod.rs  prefs.rs  recents.rs  session.rs  themes.rs
src/agent/: AgentPanel.css  AgentPanel.tsx
src/ai/: AgentTurnView.css  AgentTurnView.tsx  GrammarPopover.css  GrammarPopover.tsx  InlineChatBar.css  InlineChatBar.tsx  MarkdownText.tsx  PendingEditControls.css  PendingEditControls.tsx  apply-edit.ts  chat-history.ts  chat-selection-plugin.ts  completion-style.ts  debounced-task.ts  doc-markdown.test.ts  doc-markdown.ts  doc-text.ts  ghost-text-plugin.ts  grammar-check-plugin.ts  markdown-render.ts  pending-edit-focus.test.ts  pending-edit-focus.ts  pending-edit-plugin.ts  provider-catalog.ts  quick-ask-widget-plugin.ts  text-locate.test.ts  text-locate.ts  types.ts  useAgentConversation.ts  useAiActions.ts  useGrammarPopover.ts  useInlineChat.ts  usePendingEdits.ts
src/editor/: ContextMenu.css  ContextMenu.tsx  EditorPane.tsx  FindReplaceBar.css  FindReplaceBar.tsx  InsertTableDialog.css  InsertTableDialog.tsx  MilkdownEditor.tsx  br-hardbreak-plugin.ts  clipboard-history-plugin.ts  code-block-indent-plugin.test.ts  code-block-indent-plugin.ts  code-block-language-view.ts  content-themes.css  editor-extensions.ts  enclosure.ts  escape-trailing-block-plugin.ts  find-replace-plugin.ts  format-shortcut-plugin.ts  frontmatter-schema.ts  ghost-text-plugin.ts  github-alert-plugin.ts  grammar-check-plugin.ts  heading-marker-plugin.ts  highlight-syntax.ts  image-migration.ts  image-plugin.ts  large-doc.ts  mark-marker-plugin.ts  math-autopair-plugin.ts  math-preview-plugin.ts  math-schema.ts  md-span-autopair-plugin.ts  md-span-schema.ts  mermaid-plugin.ts  milkdown-theme.css  parse-markdown-source.ts  paste-markdown-plugin.ts  placeholder-plugin.ts  raw-html-preview-plugin.ts  (+11 more)
src/help/: agent-guide.en.md  agent-guide.ja.md  (+9 more)
(+80 files in other folders)
