[package]
name = "levis"
version = "0.8.1"
description = "Levis Markdown Editor"
authors = ["you"]
edition = "2021"

[workspace]
members = ["crates/aicompat"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "levis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for transparent webview windows (the floating
# drag-pill window a tab turns into while being dragged between windows).
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "macros", "rt"] }
base64 = "0.22"
aicompat = { path = "crates/aicompat" }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# macOS-native PDF export (commands/export.rs). Only macOS needs native code:
# it renders the themed document in an offscreen WKWebView and shows the system
# print panel via NSPrintOperation, because wry's window.print() is broken there
# (Windows/Linux use window.print() straight from the frontend). Versions and
# the objc2 ecosystem are already in the tree via wry; features here switch on
# the AppKit printing + WebKit bits wry doesn't itself use.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSURL",
    "NSError",
    "NSObject",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "CFCGTypes",
    "objc2",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSView",
    "NSPrintInfo",
    "NSPrintOperation",
] }
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKNavigation",
    "WKNavigationDelegate",
    "objc2-core-foundation",
    "objc2-app-kit",
] }
