[package]
name = "aicompat"
version = "0.1.0"
edition = "2021"
description = "Provider-agnostic OAuth and API client compatibility layer for AI assistant features (OpenAI/Codex, Anthropic/Claude, custom OpenAI-compatible endpoints)"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
tauri-plugin-oauth = "2"
